<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:enabled="false"
        android:title="설정">
        <menu>
            <group>
                <item
                    android:id="@+id/action_money"
                    android:enabled="true"
                    android:icon="@drawable/ic_money"
                    android:title="@string/money" />
                <item
                    android:id="@+id/action_pay_method"
                    android:enabled="true"
                    android:icon="@drawable/ic_pay_method"
                    android:title="@string/pay_method" />
                <item
                    android:id="@+id/action_prepare"
                    android:enabled="true"
                    android:icon="@drawable/ic_prepare"
                    android:title="@string/prepare" />
                <item
                    android:id="@+id/action_category"
                    android:enabled="true"
                    android:icon="@drawable/ic_category"
                    android:title="@string/category" />
            </group>
        </menu>
    </item>
    <group android:id="@+id/prepare">
        <item
            android:id="@+id/action_backup"
            android:enabled="true"
            android:icon="@drawable/ic_backup"
            android:title="@string/backup" />
        <item
            android:id="@+id/action_premium"
            android:enabled="true"
            android:icon="@drawable/ic_premium"
            android:title="@string/premium" />
    </group>
    <group android:id="@+id/support">
        <item
            android:id="@+id/action_review"
            android:enabled="true"
            android:icon="@drawable/ic_review"
            android:title="@string/review" />
        <item
            android:id="@+id/action_bug_report"
            android:enabled="true"
            android:icon="@drawable/ic_bug_report"
            android:title="@string/bug_report" />
    </group>
</menu>